k8s/04_full-redis-cluster.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: infrastructure
  labels:
    purpose: infrastructure
spec:
  finalizers:
    - kubernetes
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cluster
  namespace: infrastructure
  labels:
    app.kubernetes.io/name: redis-cluster
    app.kubernetes.io/instance: redis-cluster
spec:
  serviceName: redis-cluster
  replicas: 6
  selector:
    matchLabels:
      app: redis-cluster
  template:
    metadata:
      labels:
        app: redis-cluster
    spec:
      containers:
      - name: redis
        image: redis:7.0.10-alpine
        ports:
        - containerPort: 6379
          name: client
        - containerPort: 16379
          name: gossip
        command: ["/conf/update-node.sh", "redis-server", "/conf/redis.conf"]
        volumeMounts:
        - name: conf
          mountPath: /conf
          readOnly: false
        - name: data
          mountPath: /data
          readOnly: false
      volumes:
      - name: conf
        configMap:
          name: redis-cluster
          defaultMode: 0755
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 512M
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster
  namespace: infrastructure
  labels:
    app.kubernetes.io/name: redis-cluster
    app.kubernetes.io/instance: redis-cluster
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    name: client
  - port: 16379
    targetPort: 16379
    name: gossip
  selector:
    app: redis-cluster
