k8s/04_redis.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: infrastructure
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.0.10-alpine
        ports:
        - containerPort: 6379
          name: client
        volumeMounts:
        - name: data
          mountPath: /data
          readOnly: false
      volumes:
      - name: conf
        configMap:
          name: redis
          defaultMode: 0755
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 512M
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: infrastructure
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    name: client
  selector:
    app: redis
